# JournAI_App

./: .gitignore  README.md  proxy-test.http
android/: build.gradle.kts  gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/schemas/com.journai.journai.data.database.JournAIDatabase/: 1.json  2.json  3.json  4.json
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/: .placeholder
android/app/src/main/cpp/: CMakeLists.txt
android/app/src/main/cpp/src/: whisper_jni.cpp
android/app/src/main/kotlin/com/journai/journai/: JournAIApplication.kt
android/app/src/main/kotlin/com/journai/journai/auth/: AuthManager.kt  DeviceKeyManager.kt  IntegrityService.kt  SecurePrefs.kt
android/app/src/main/kotlin/com/journai/journai/chat/: AgentOrchestrator.kt  ChatService.kt  ChatTools.kt
android/app/src/main/kotlin/com/journai/journai/di/: DatabaseModule.kt  NetworkModule.kt  PrefsModule.kt  SpeechModule.kt
android/app/src/main/kotlin/com/journai/journai/network/: OrganizeService.kt  ProxyApi.kt
android/app/src/main/res/drawable/: ic_launcher_foreground.xml
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml  network_security_config.xml
android/gradle/: libs.versions.toml
server/: README.md  chat_test.html  package-lock.json  package.json
server/src/: cache.js  config.js  index.js  redact.js
server/src/routes/: chat.js  devices.js  embed.js  register.js  transcribe.js
(+52 files in other folders)
